--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h2>所有資料</h2>
 
 <ul>
-    <% tasks.forEach(function(task) { %>
-        <li><a href='/task/<%= task.id %>'><%= task.id %>: <%= task.title %></a></li>
+    <% todos.forEach(function(todo) { %>
+        <li><a href='/todo/<%= todo.id %>'><%= todo.id %>: <%= todo.title %></a></li>
     <% }); %>
 </ul>
