--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <% }); %>
 </ul>
 <form name="form" method="POST" action="/">
-        <input name="name" placeholder="姓名"/>
-        <button class="send">送出意見</button>
+        <input name="title" placeholder="姓名"/>
+        <input id="send" type="submit" value="送出">
+
 </form>
