--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,41 @@
-<h2>所有資料</h2>
+<!DOCTYPE html>
 
-<ul>
-    <% todos.forEach(function(todo) { %>
-        <li><a href='/todo/<%= todo.id %>'><%= todo.id %>: <%= todo.title %></a></li>
-    <% }); %>
-</ul>
-<form name="form" method="POST" action="/">
-        <input name="title" placeholder="姓名"/>
-        <input id="send" type="submit" value="送出">
+<html lang="en">
 
-</form>
+
+<% include head %>
+
+
+    <body>
+        <div class="wrapper">
+            <header class="header">
+<h2>Todo List</h2>
+            </header>
+            <section class="main">
+                <div class="display">
+                    <ul class="list">
+                        <% todos.forEach(function(todo) { %>
+                            <li class="list--item">
+                                   <p><%= todo.id %></p> 
+                                   <p><%= todo.title %></p>
+                                <a href='/<%= todo.id %>'>
+                                </a>
+                            </li>
+                            <% }); %>
+                    </ul>
+                </div>
+                <div class="form">
+                    <form class="inner" name="form" method="POST" action="/">
+                        <input class="input" name="title" placeholder="待辦事項" />
+                        <input class="btn" type="submit" value="+">
+                    </form>
+                </div>
+
+            </section>
+
+            <footer>
+            </footer>
+
+        </div>
+
+    </body>
