--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,16 +9,20 @@
     <body>
         <div class="wrapper">
             <header class="header">
-<h2>Todo List</h2>
+                <h2>Todo List</h2>
             </header>
             <section class="main">
                 <div class="display">
                     <ul class="list">
                         <% todos.forEach(function(todo) { %>
                             <li class="list--item">
-                                   <p><%= todo.id %></p> 
-                                   <p><%= todo.title %></p>
-                                <a href='/<%= todo.id %>' class="btn-delete" data-id="<%= todo.id %>">刪除</a>
+                                <p>
+                                    <%= todo.id %>
+                                </p>
+                                <p>
+                                    <%= todo.title %>
+                                </p>
+                                <div class="btn-delete" data-id="<%= todo.id %>">刪除</div>
 
                             </li>
                             <% }); %>
@@ -27,7 +31,7 @@
                 <div class="form">
                     <form class="inner" name="form" method="POST" action="/">
                         <input class="input" name="title" placeholder="待辦事項" />
-                        <input class="btn" type="submit" value="+">
+                        <input class="btn"  value="+">
                     </form>
                 </div>
 
@@ -37,5 +41,5 @@
             </footer>
 
         </div>
-
+        <script src="/public/js/main.js"></script>
     </body>
