--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                 <div class="form">
                     <form class="inner" name="form" method="POST" action="/">
                         <input class="input" name="title" placeholder="待辦事項" />
-                        <input class="btn"  value="+">
+                        <input class="btn" type="submit" value="+">
                     </form>
                 </div>
 
