--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,6 +144,14 @@ ul {
   padding: 48px;
 }
 
+.form .inner.login {
+  flex-flow: column wrap;
+}
+
+.form .inner.login input:not([type="submit"]) {
+  margin: 16px;
+}
+
 .form .inner input:not([type="submit"]) {
   padding: 12px 16px;
   display: inline-block;
@@ -184,6 +192,29 @@ ul {
 .form .inner .btn:hover {
   background-color: #73B2BD;
   color: #F5F3F4;
+}
+
+.form .inner .btns {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form .inner .btns .btn:nth-child(1) {
+  color: #7a8b99;
+}
+
+.form .inner .btns .btn:nth-child(even) {
+  color: #cc2581;
+}
+
+.form .inner .btns .btn.login {
+  border-radius: 10%;
+  width: 60px;
+  height: 30px;
+  font-size: 0.7rem;
+  margin: 0px;
 }
 
 .btn-delete {
