--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -39,7 +39,9 @@ $h) {
 }
 
 $color-primary:#f5f5f5;
-$color-secondary:rgb(154, 194, 199);
+$color-secondary:rgb(154,
+194,
+199);
 $color-bg:#7a8b99;
 $color-white:#F5F3F4;
 $block:#73B2BD;
@@ -92,12 +94,12 @@ ul {
     -webkit-user-drag: none;
     transition: all .5s;
 }
-.header{
-    
-        display: inline-block;
-        margin-bottom: 8px;
-    
+
+.header {
+    display: inline-block;
+    margin-bottom: 8px;
 }
+
 /*-------------------------*/
 
 /* $main
@@ -146,9 +148,17 @@ ul {
     100%);
     @include flexCenter();
     .inner {
-        @include flexCenter();    flex-flow: row nowrap;
+        &.login {
+            flex-flow: column wrap;
+            input {
+                &:not([type="submit"]) {
+                    margin: 16px;
+                }
+            }
+        }
+        @include flexCenter();
+        flex-flow: row nowrap;
         @include size(100%,
-        
         100%);
         padding: 48px;
         input {
@@ -165,9 +175,8 @@ ul {
                 border: $color-white 1px solid;
                 transition: 0.5s;
                 box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-
             }
-           &:focus {
+            &:focus {
                 outline: 0;
                 border: $color-secondary 1px solid;
             }
@@ -183,17 +192,38 @@ ul {
             @include size(60px,
             50px);
             font-size: 25px;
-            color: lighten($block,20);
+            color: lighten($block, 20);
             border: 0px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-            &:hover{
+            &:hover {
                 background-color: $block;
                 color: $color-white;
+            }
+        }
+        .btns {
+            @include size(100%,
+            100%);
+            display: flex;
+            justify-content: space-between;
+            .btn {
+                &:nth-child(1) {
+                    color: #7a8b99;
+                }
+                &:nth-child(even) {
+                    color: #cc2581;
+                }
+                &.login {
+                    border-radius: 10%;
+                    @include size(60px,
+                    30px);
+                    font-size: 0.7rem;
+                    margin: 0px;
+                }
             }
         }
     }
 }
 
-.btn-delete{
+.btn-delete {
     cursor: pointer;
 }
