passport signup ok

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,19 +9,19 @@
     <body>
         <div class="wrapper">
             <header class="header">
-                <h2>Login</h2>
+                <h2>Signup</h2>
             </header>
             <section class="main">
 
-                <div class="formlogin">
-                    <form class="inner login" name="form" method="POST" action="/">
-                        <input class="input" name="usrname" placeholder="待辦事項" />
+                <div class="form">
+                    <form class="inner login" name="signup" method="POST" action="/signup">
+                        <input class="input" name="username" placeholder="待辦事項" />
                         <input class="input" name="password" placeholder="待辦事項" />
                         <div class="btns">
 
-                            <input class="btn login" type="submit" value="註冊">
-                            <input class="btn login" type="submit" value="登入">
-                            <input class="btn login" type="submit" value="登入">
+                            <input class="btn" type="submit" value="註冊">
+                            <input class="btn" type="submit" value="登入">
+                            <input class="btn" type="submit" value="登入">
 
                         </div>
 
