passport login logout ok

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         <div class="wrapper">
             <header class="header">
                 <h2>Todo List</h2>
+                <a href="/logout">登出</a>
             </header>
             <section class="main">
                 <div class="display">
@@ -29,9 +30,9 @@
                     </ul>
                 </div>
                 <div class="form">
-                    <form class="inner" name="form" method="POST" action="/">
+                    <form class="inner" name="form" method="POST" action="/task">
                         <input class="input" name="title" placeholder="待辦事項" />
-                        <input class="insert" type="submit" value="+">
+                        <input class="btn" type="submit" value="+">
                     </form>
                 </div>
 
