--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,9 +13,9 @@
             </header>
             <section class="main">
 
-                <div class="formlogin">
-                    <form class="inner login" name="form" method="POST" action="/">
-                        <input class="input" name="usrname" placeholder="待辦事項" />
+                <div class="form">
+                    <form class="inner login" name="form" method="POST" action="/signin">
+                        <input class="input" name="username" placeholder="待辦事項" />
                         <input class="input" name="password" placeholder="待辦事項" />
                         <div class="btns">
 
