--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
             <section class="main">
 
                 <div class="form">
-                    <form class="inner login" name="signup" method="POST" action="/signup">
+                    <form class="inner login" name="form" method="POST" action="/signup">
                         <input class="input" name="username" placeholder="待辦事項" />
                         <input class="input" name="password" placeholder="待辦事項" />
                         <div class="btns">
