--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,38 @@ ul {
   min-height: 100vh;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+}
+
+.header .content {
+  width: 100%;
+  height: 100%;
+  margin: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  justify-content: flex-end;
+  flex-flow: row wrap;
+}
+
+.header .content a {
+  display: flex;
+}
+
+.header .content a:hover {
+  color: #9ac2c7;
+}
+
+.header .content p {
+  display: flex;
+  margin: 0 16px;
+}
+
 .main {
   display: flex;
   align-items: center;
@@ -187,6 +219,8 @@ ul {
   color: #b8d8de;
   border: 0px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  text-align: center;
 }
 
 .form .inner .btn:hover {
@@ -199,10 +233,13 @@ ul {
   height: 100%;
   display: flex;
   justify-content: space-between;
+  margin-top: 32px;
 }
 
 .form .inner .btns .btn:nth-child(1) {
   color: #7a8b99;
+  text-align: center;
+  padding: 8px;
 }
 
 .form .inner .btns .btn:nth-child(even) {
@@ -219,5 +256,9 @@ ul {
 
 .btn-delete {
   cursor: pointer;
+}
+
+.btn-delete:hover {
+  color: #9ac2c7;
 }
 /*# sourceMappingURL=main.css.map */
