--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,19 +10,21 @@
         <div class="wrapper">
             <header class="header">
                 <h2>Todo List</h2>
-                <a href="/logout">登出</a>
+
+                <div class="content">
+                    <p class="userName"><%= user %></p>
+                    <a class="logStatus" href="/logout">登出</a>
+
+                </div>
+
             </header>
             <section class="main">
                 <div class="display">
                     <ul class="list">
                         <% todos.forEach(function(todo) { %>
                             <li class="list--item">
-                                <p>
-                                    <%= todo.id %>
-                                </p>
-                                <p>
-                                    <%= todo.title %>
-                                </p>
+                                <p><%= todo.id %></p>
+                                <p><%= todo.title %></p>
                                 <div class="btn-delete" data-id="<%= todo.id %>">刪除</div>
 
                             </li>
@@ -32,7 +34,7 @@
                 <div class="form">
                     <form class="inner" name="form" method="POST" action="/task">
                         <input class="input" name="title" placeholder="待辦事項" />
-                        <input class="btn" type="submit" value="+">
+                        <input class="btn action" type="submit" value="+">
                     </form>
                 </div>
 
