--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
 
     <body>
-        <div class="wrapper">
+        <a class="wrapper">
             <header class="header">
                 <h2>Login</h2>
             </header>
@@ -18,10 +18,9 @@
                         <input class="input" name="username" placeholder="待辦事項" />
                         <input class="input" name="password" placeholder="待辦事項" />
                         <div class="btns">
-
-                            <input class="btn login" type="submit" value="註冊">
-                            <input class="btn login" type="submit" value="登入">
-                            <input class="btn login" type="submit" value="登入">
+                            <div class="btn login signup">註冊</div>
+                            <!-- <a href="/signup" class="btn login">刪除 -->
+                            <input class="btn login action" type="submit" value="登入">
 
                         </div>
 
@@ -35,6 +34,6 @@
             <footer>
             </footer>
 
-        </div>
-        <script src="/public/js/main.js"></script>
+            </div>
+            <script src="/public/js/main.js"></script>
     </body>
