--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,13 +15,10 @@
 
                 <div class="form">
                     <form class="inner login" name="form" method="POST" action="/signup">
-                        <input class="input" name="username" placeholder="待辦事項" />
-                        <input class="input" name="password" placeholder="待辦事項" />
+                        <input class="input" name="username" placeholder="帳號" />
+                        <input class="input" name="password" type="password" placeholder="密碼" />
                         <div class="btns">
-
-                            <input class="btn" type="submit" value="註冊">
-                            <input class="btn" type="submit" value="登入">
-                            <input class="btn" type="submit" value="登入">
+                            <input class="btn login action" type="submit" value="註冊">
 
                         </div>
 
