--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,8 +10,12 @@
         <div class="wrapper">
             <header class="header">
                 <h2>Signup</h2>
+                <p class="userName">
+                    <%= message %>
+                </p>
+
             </header>
-            <section class="main">
+            <section class="main signup">
 
                 <div class="form">
                     <form class="inner login" name="form" method="POST" action="/signup">
@@ -19,19 +23,12 @@
                         <input class="input" name="password" type="password" placeholder="密碼" />
                         <div class="btns">
                             <input class="btn login action" type="submit" value="註冊">
-
                         </div>
-
-
-
                     </form>
                 </div>
-
             </section>
-
             <footer>
             </footer>
-
         </div>
         <script src="/public/js/main.js"></script>
     </body>
