--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,32 @@ ul {
   padding: 0;
 }
 
+input:not([type="submit"]) {
+  padding: 12px 16px;
+  padding-top: 14px;
+  display: inline-block;
+  border: 0px solid #b4bdc5;
+  background-color: white;
+  border-radius: 4px;
+  vertical-align: middle;
+  box-sizing: border-box;
+  width: 100%;
+  font-size: 0.8rem;
+  border: #F5F3F4 1px solid;
+  transition: 0.5s;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+input:focus {
+  outline: 0;
+  border: #9ac2c7 1px solid;
+}
+
+input::-webkit-input-placeholder {
+  color: #d1d7db;
+  font-size: 0.8rem;
+}
+
 .btn {
   display: inline-block;
   text-align: center;
@@ -164,6 +190,16 @@ ul {
   display: inline-block;
 }
 
+.display .list .list--item p input {
+  background-color: #F5F3F4;
+  box-shadow: none;
+}
+
+.display .list .list--item p input::-webkit-input-placeholder {
+  color: #7a8b99;
+  font-size: 1rem;
+}
+
 .form {
   width: 100%;
   height: 100%;
@@ -190,31 +226,6 @@ ul {
 
 .form .inner.login input:not([type="submit"]) {
   margin: 16px;
-}
-
-.form .inner input:not([type="submit"]) {
-  padding: 12px 16px;
-  display: inline-block;
-  border: 0px solid #b4bdc5;
-  background-color: white;
-  border-radius: 4px;
-  vertical-align: middle;
-  box-sizing: border-box;
-  width: 100%;
-  font-size: 0.8rem;
-  border: #F5F3F4 1px solid;
-  transition: 0.5s;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.form .inner input:focus {
-  outline: 0;
-  border: #9ac2c7 1px solid;
-}
-
-.form .inner input::-webkit-input-placeholder {
-  color: #d1d7db;
-  font-size: 0.8rem;
 }
 
 .form .inner .btn {
@@ -271,6 +282,14 @@ ul {
 }
 
 .btn-delete:hover {
+  color: #e95e5e;
+}
+
+.btn-update {
+  cursor: pointer;
+}
+
+.btn-update:hover {
   color: #9ac2c7;
 }
 /*# sourceMappingURL=main.css.map */
