--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,10 +36,10 @@
                                     </form>
                                 </p>
                                 <div class="btns">
-                                    <div class="btnUpdate" data-id="<%= todo.id %>" data-num="">
-                                        修改 </div>
-                                    <div class="btnDelete" data-id="<%= todo.id %>"data-num="">
-                                        刪除 </div>
+                                    <button class="btnUpdate" data-id="<%= todo.id %>" data-num="" type="button">
+                                        修改 </button>
+                                    <button class="btnDelete" data-id="<%= todo.id %>" data-num="" type="button">
+                                        刪除</button>
                                 </div>
                             </li>
                             <% }); %>
