--- a/public/css/main.css
+++ b/public/css/main.css
@@ -186,20 +186,6 @@ input::-webkit-input-placeholder {
   border-radius: 5px;
 }
 
-.display .list .list--item p {
-  display: inline-block;
-}
-
-.display .list .list--item p input {
-  background-color: #F5F3F4;
-  box-shadow: none;
-}
-
-.display .list .list--item p input::-webkit-input-placeholder {
-  color: #7a8b99;
-  font-size: 1rem;
-}
-
 .form {
   width: 100%;
   height: 100%;
@@ -291,5 +277,22 @@ input::-webkit-input-placeholder {
 
 .btnUpdate:hover {
   color: #9ac2c7;
+}
+
+button {
+  background-color: none;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  padding: 0 16px;
+  margin-top: 16px;
+}
+
+form input.item--inner {
+  background-color: #F5F3F4;
+  font-size: 16px;
+  box-shadow: none;
 }
 /*# sourceMappingURL=main.css.map */
