--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,3 @@
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="/public/img/web-02.png">
-    <link rel="stylesheet" href="/public/css/main.css">
-    <title>Middle Project</title>
-</head>
+<footer class="footer">
+    <p>Published By Ashu 2018 </p>
+</footer>
