--- a/views/page/dashboard.ejs
+++ b/views/page/dashboard.ejs
@@ -8,14 +8,13 @@
 
     <body>
         <div class="dashboard">
-                <% include header %>
-            <section class="main">
+            <% include header %>
+                <section class="main">
+                    <p>歡迎來到管理頁面</p>
+                </section>
 
-            </section>
+                <% include ../footer %>
 
-            <footer class="footer">
-                <p>123</p>
-            </footer>
 
         </div>
         <script src="/public/js/main.js"></script>
