--- a/views/page/login.ejs
+++ b/views/page/login.ejs
@@ -7,7 +7,7 @@
 
 
     <body>
-        <div class="wrapper">
+        <div class="login">
             <header class="header">
                 <h2>Login</h2>
                 <p class="userName">
@@ -15,15 +15,13 @@
                 </p>
             </header>
             <section class="main">
-                <form class="inner login" name="form" method="POST" action="/login">
+                <form class="inner" name="form" method="POST" action="/login">
                     <input class="input" name="username" placeholder="帳號" />
                     <input class="input" name="password" type="password" placeholder="密碼" />
-                    <input class="login" type="submit" value="登入">
+                    <input class="btn" type="submit" value="登入">
                 </form>
             </section>
 
-            <footer>
-            </footer>
 
         </div>
 
