--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,6 +51,31 @@ li {
   padding: 0;
 }
 
+input,
+textarea {
+  resize: none;
+  display: inline-block;
+  border: 0px solid white;
+  background-color: white;
+  border-radius: 4px;
+  vertical-align: middle;
+  box-sizing: border-box;
+  font-size: 1rem;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+input:focus,
+textarea:focus {
+  outline: 0;
+  border: #9ac2c7 1px solid;
+}
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #9aa4ac;
+  font-size: 0.8rem;
+}
+
 .btn {
   display: inline-block;
   text-align: center;
@@ -62,62 +87,189 @@ li {
   overflow: hidden;
   user-select: none;
   -webkit-user-drag: none;
-  transition: all .5s;
+  transition: background-color .5s;
+}
+
+.btn:hover {
+  background-color: #73B2BD;
+  color: #F5F3F4;
 }
 
 /*-------------------------*/
-/* $main
+/* $dashboard
 ---------------------------*/
 .dashboard {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 20% auto 5%;
-  grid-template-columns: 20% auto 5%;
+  grid-template-rows: 30% auto 5%;
+  grid-template-columns: 30% auto 5%;
   grid-template-areas: "a b b" "a b b" "a c c";
 }
 
 .dashboard .header {
+  width: 100%;
+  height: 100%;
   grid-area: a;
-  background-color: #31363a;
-  outline: #31363a 1px solid;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
   justify-content: flex-start;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.1);
+  transition: all .3s;
 }
 
-.dashboard .header ul {
-  cursor: pointer;
+.dashboard .header .nav {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  background-color: #434446;
+  display: flex;
+  flex-flow: row wrap;
+  font-size: 1.1rem;
+  padding: 16px;
+}
+
+.dashboard .header .nav p {
+  color: #F5F3F4;
   padding: 8px;
 }
 
-.dashboard .header ul .item {
-  padding-left: 8px;
+.dashboard .header .list {
+  margin-top: 16px;
+  padding: 16px;
+  font-size: 1rem;
 }
 
-.dashboard .header ul .item li {
+.dashboard .header .list ul {
+  cursor: pointer;
+  margin: 8px;
+  margin-bottom: 16px;
+  color: #434446;
+}
+
+.dashboard .header .list ul .item {
+  display: none;
+}
+
+.dashboard .header .list ul .item li {
+  font-size: 0.9rem;
+  color: #73B2BD;
   margin: 8px;
 }
 
-.dashboard .header ul .item--open {
+.dashboard .header .list ul .item a:nth-child(1) {
+  margin-top: 12px;
+}
+
+.dashboard .header .list ul .item li:hover {
+  color: #4e575f;
+}
+
+.dashboard .header .list ul .item--open {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.dashboard .main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  grid-area: b;
+  color: #31363a;
+}
+
+.dashboard .main form {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.dashboard .main form input,
+.dashboard .main form textarea {
+  margin: 8px;
+  padding: 8px;
+}
+
+.dashboard .main form label {
+  margin-left: 8px;
+  padding-left: 8px;
+  margin-top: 8px;
+}
+
+.dashboard .main .list {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.dashboard .main .list .list--item {
+  border: 1px #9ac2c7 solid;
+  border-radius: 20px;
+  margin: 16px;
+  padding: 32px;
+}
+
+.dashboard .main .list .list--item label,
+.dashboard .main .list .list--item input,
+.dashboard .main .list .list--item a {
+  padding: 8px;
+}
+
+.dashboard .main .list .list--item a:hover {
+  color: #4e575f;
+}
+
+.dashboard .footer {
+  grid-area: c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  border-top: #b8d8de 1px solid;
+  font-size: 0.8rem;
+}
+
+.dashboard .footer p {
+  color: #b8d8de;
+}
+
+.login {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
 }
 
-.dashboard .main {
-  grid-area: b;
-  outline: #31363a 1px solid;
-  border: #31363a 1px solid;
-  color: #31363a;
+.login .main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  width: 30%;
+  height: 30%;
+  min-width: 500px;
+  background: -webkit-linear-gradient(top, #88c1cb 0%, rgba(179, 213, 219, 0.91) 88%, rgba(196, 214, 216, 0.9) 99%, rgba(197, 214, 216, 0.9) 100%);
+  border-radius: 10px;
+  box-shadow: 0 3px 30px rgba(0, 0, 0, 0.3);
 }
 
-.dashboard .footer {
-  grid-area: c;
-  background-color: #73B2BD;
-  outline: #31363a 1px solid;
+.logout {
+  position: relative;
+  bottom: 0;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 30% auto 5%;
+  grid-template-columns: 30% auto 5%;
+  grid-template-areas: "a b b" "a b b" "a c c";
 }
 /*# sourceMappingURL=main.css.map */
