--- a/views/page/accountShow.ejs
+++ b/views/page/accountShow.ejs
@@ -13,12 +13,9 @@
                     <ul class="list">
                         <% data.forEach(function(todo) {%>
                             <li class="list--item">
-                                <p>
-                                    <%= todo.id %>
-                                </p>
-                                <p>
-                                        <input class="item--inner" name="display" disabled="disabled" value="<%= todo.username %>" placeholder="<%= todo.context %>" />
-                                </p>
+                                    <label for="">帳號名稱：</label>
+                                    <label for=""><%= todo.username %></label>
+                                
                                 <div class="btns">
 
                                     <!-- <a href="/dashboard/edit?id=<%= todo.id %>">修改</a> -->
@@ -32,9 +29,7 @@
                     </ul>
                 </section>
 
-                <footer class="footer">
-                    <p>123</p>
-                </footer>
+                <% include ../footer %>
 
         </div>
         <script src="/public/js/main.js"></script>
