--- a/views/page/header.ejs
+++ b/views/page/header.ejs
@@ -1,31 +1,40 @@
 <header class="header">
-    <a href="/dashboard">
-        <p>dashboard</p>
-    </a>
-    <ul>
-        <a href="/dashboard">
-            文章管理 </a>
-        <div class="item">
-            <a href="/dashboard/post">
-                <li>發表文章</li>
-            </a>
-            <a href="/dashboard/article">
-                <li>修改文章</li>
-            </a>
-        </div>
+    <div class="nav">
+        <p>後台管理</p>
+        <p>前台</p>
 
-    </ul>
-    <ul>帳號管理
+    </div>
+    <div class="list">
+
+        <ul>
+            文章管理
+            
+            
+            <div class="item">
+                <a href="/dashboard/post">
+                    <li>發表文章</li>
+                </a>
+                <a href="/dashboard/article">
+                    <li>修改文章</li>
+                </a>
+            </div>
+
+        </ul>
+        <ul>
+           帳號管理
+            
             <div class="item">
 
-        <a href="/dashboard/account">
-            <li>所有帳號</li>
-        </a>
-        <a href="/dashboard/signup">
-            <li>新增帳號</li>
-        </a>
+                <a href="/dashboard/account">
+                    <li>所有帳號</li>
+                </a>
+                <a href="/dashboard/signup">
+                    <li>新增帳號</li>
+                </a>
+            </div>
+
+        </ul>
     </div>
 
-    </ul>
-    <a href="/dashboard/logout">登出</a>
+    <a class="logout" href="/dashboard/logout">登出</a>
 </header>
