--- a/views/page/signup.ejs
+++ b/views/page/signup.ejs
@@ -13,20 +13,19 @@
                 <% include header %>
                
             <section class="main">
-                    <p class="userName">
-                            <%= message %>
-                        </p>
+                  
                     <form class="inner login" name="form" method="POST" action="/dashboard/signup">
+                        <p class="userName">
+                                <%= message %>
+                        </p>
                         <input class="input" name="username" placeholder="帳號" />
                         <input class="input" name="password" type="password" placeholder="密碼" />
-                        <input class="login" type="submit" value="註冊">
+                        <input class="btn" type="submit" value="註冊">
                     </form>
     
             </section>
 
-            <footer class="footer">
-                <p>123</p>
-            </footer>
+            <% include ../footer %>
 
         </div>
         <script src="/public/js/main.js"></script>
