--- a/public/css/main.css
+++ b/public/css/main.css
@@ -269,7 +269,197 @@ textarea::-webkit-input-placeholder {
   height: 100%;
   display: grid;
   grid-template-rows: 30% auto 5%;
-  grid-template-columns: 30% auto 5%;
-  grid-template-areas: "a b b" "a b b" "a c c";
+  grid-template-columns: 350px auto 5%;
+  grid-template-areas: "a b b" "a b b" "a b b";
+}
+
+.wrapper .header {
+  grid-area: a;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper .header .navbar {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column nowrap;
+}
+
+.wrapper .header .navbar .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 80px 80px;
+}
+
+.wrapper .header .navbar .logo img {
+  width: 130px;
+  height: 130px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 20px;
+}
+
+.wrapper .header .navbar .bottom {
+  width: 100%;
+}
+
+.wrapper .header .navbar .bottom .colLogo {
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+}
+
+.wrapper .header .navbar .bottom .colLogo .main--text {
+  color: #000;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.wrapper .header .navbar .bottom .colLogo .sub--text {
+  padding: 10px;
+  font-weight: 300;
+  color: #b6bdc3;
+  font-size: 0.9rem;
+}
+
+.wrapper .header .navbar .bottom .social {
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  padding: 16px;
+  padding-bottom: 0;
+  margin-bottom: 25px;
+}
+
+.wrapper .header .navbar .bottom .social img {
+  width: 28px;
+  height: 28px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: #4e575f solid 1px;
+  margin: 0 8px;
+  padding: 4px;
+  opacity: 0.6;
+  color: #73B2BD;
+}
+
+.wrapper .header .navbar .bottom .about {
+  width: 100%;
+  transition: all 0.4s;
+}
+
+.wrapper .header .navbar .bottom .about .aboutus {
+  background: #000;
+  padding: 50px 35px;
+  border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
+}
+
+.wrapper .header .navbar .bottom .about .aboutus span {
+  pointer-events: none;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  color: #F5F3F4;
+}
+
+.wrapper .header .navbar .bottom .about .hover:nth-child(1) :hover {
+  transition: background-color 0.5s;
+  background-color: #9ac2c7;
+}
+
+.wrapper .header .navbar .bottom .about .hover:nth-child(1) :hover span {
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  color: #4e575f;
+}
+
+.wrapper .header .navbar .bottom .about .hover:nth-child(2) :hover {
+  transition: background-color 0.5s;
+  background-color: #73B2BD;
+}
+
+.wrapper .header .navbar .bottom .about .hover:nth-child(2) :hover span {
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  color: #4e575f;
+}
+
+.wrapper .main {
+  grid-area: b;
+  background-color: #fafafa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  flex-flow: row wrap;
+}
+
+.wrapper .main .post {
+  border-radius: 5px;
+  width: 300px;
+  height: 300px;
+  margin: 16px;
+  border-bottom: #4e575f solid 5px;
+  background-color: #fff;
+  overflow: hidden;
+  transition: box-shadow 0.5s;
+}
+
+.wrapper .main .post img {
+  width: 100%;
+  height: 60%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: #4e575f solid 1px;
+  transition: transform 0.7s;
+}
+
+.wrapper .main .post .text {
+  padding: 20px;
+}
+
+.wrapper .main .post .text .title {
+  margin-bottom: 24px;
+}
+
+.wrapper .main .post .text .title h3 {
+  color: #4e575f;
+  letter-spacing: 2px;
+}
+
+.wrapper .main .post .text .date {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.wrapper .main .post:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+}
+
+.wrapper .main .post:hover img {
+  transform: scale(1.1);
 }
 /*# sourceMappingURL=main.css.map */
