--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -38,6 +38,12 @@ $h) {
     flex-flow: row wrap;
 }
 
+@mixin background {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 $color-text--dark:#4e575f;
 $color-text:#73B2BD;
 $color-white:#F5F3F4;
@@ -226,9 +232,9 @@ textarea {
     .footer {
         grid-area: c;
         @include flexCenter();
-        border-top:lighten($color-text, 20) 1px solid;
+        border-top: lighten($color-text, 20) 1px solid;
         font-size: 0.8rem;
-        p{
+        p {
             color: lighten($color-text, 20);
         }
     }
@@ -259,6 +265,147 @@ textarea {
     100%);
     display: grid;
     grid-template-rows: 30% auto 5%;
-    grid-template-columns: 30% auto 5%;
-    grid-template-areas: "a b b" "a b b" "a c c";
+    grid-template-columns: 350px auto 5%;
+    grid-template-areas: "a b b" "a b b" "a b b";
+    .header {
+        grid-area: a;
+        background-color: #fff;
+        @include size(100%,
+        100%);
+        .navbar {
+            @include size(100%,
+            100vh);
+            display: flex;
+            justify-content: space-between;
+            flex-flow: column nowrap;
+            .logo {
+                @include flexCenter();
+                flex: 1;
+                @include size(100%,
+                100%);
+                padding: 80px 80px;
+                img {
+                    @include size(130px,
+                    130px);
+                    @include background();
+                    border-radius: 20px;
+                }
+            }
+            .bottom {
+                width: 100%;
+                .colLogo {
+                    padding: 0 16px;
+                    @include flexCenter();
+                    .main--text {
+                        color: #000;
+                        font-weight: 700;
+                        font-size: 1.5rem;
+                    }
+                    .sub--text {
+                        padding: 10px;
+                        font-weight: 300;
+                        color: lighten($color-text--dark, 40);
+                        font-size: 0.9rem;
+                    }
+                }
+                .social {
+                    @include size(100%,
+                    100%);
+                    display: block;
+                    text-align: center;
+                    padding: 16px;
+                    padding-bottom: 0;
+                    margin-bottom: 25px;
+                    img {
+                        @include size(28px,
+                        28px);
+                        @include background();
+                        border-radius: 50%;
+                        border: $color-text--dark solid 1px;
+                        margin: 0 8px;
+                        padding: 4px;
+                        opacity: 0.6;
+                        color: #73B2BD;
+                    }
+                }
+                .about {
+                    width: 100%;
+                    transition: all 0.4s;
+                    .aboutus {
+                        background: #000;
+                        padding: 50px 35px;
+                        border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
+                        span {
+                            pointer-events: none;
+                            font-size: 1.4rem;
+                            @include flexCenter();
+                            color: $color-white;
+                        }
+                    }
+                    .hover:nth-child(1) :hover {
+                        transition: background-color 0.5s;
+                        background-color: $color-secondary;
+                        span {
+                            font-size: 1.4rem;
+                            @include flexCenter();
+                            color: $color-text--dark;
+                        }
+                    }
+                    .hover:nth-child(2) :hover {
+                        transition: background-color 0.5s;
+                        background-color: $color-text;
+                        span {
+                            font-size: 1.4rem;
+                            @include flexCenter();
+                            color: $color-text--dark;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .main {
+        grid-area: b;
+        background-color: lighten($color-bg, 2);
+        @include flexCenter();
+        flex-flow: row wrap;
+        .post {
+            border-radius: 5px;
+            @include size(300px,
+            300px);
+            margin: 16px;
+            border-bottom: $color-text--dark solid 5px;
+            background-color: #fff;
+            overflow: hidden;
+            transition: box-shadow 0.5s;
+            img {
+                @include size(100%,
+                60%);
+                @include background();
+                border: $color-text--dark solid 1px;
+                transition: transform 0.7s;
+
+            }
+            .text {
+                .title {
+                    margin-bottom: 24px;
+                    h3 {
+                        color: $color-text--dark;
+                        letter-spacing: 2px;
+                    }
+                }
+                padding: 20px;
+                .date {
+                    display: flex;
+                    justify-content: flex-end;
+                }
+            }
+            &:hover {
+                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+                img {
+                   transform: scale(1.1);
+                }
+            }
+        }
+    }
 }
