--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,10 +1,11 @@
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="icon" type="image/x-icon" href="/public/img/web-02.png"> -->
-   <link rel="stylesheet" href="/public/css/reset.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/css/reset.css">
     <link rel="stylesheet" href="/public/css/main.css">
     <title>Middle Project</title>
 </head>
