--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,18 +9,67 @@
     <body>
         <div class="wrapper">
             <header class="header">
-                <p>
-                    <%= user %>
-                </p>
+                <div class="navbar">
+                    <div class="logo">
+                        <img src="/public/image/st2de.png" alt="">
+                    </div>
+                    <div class="bottom">
+                        <span class="colLogo">
+                            <span class="main--text">ST2DE</span>
+                            <span class="sub--text">你好 | 很高興見到你</span>
+                        </span>
+                        <div class="social">
+                            <a href="">
+                                <img src="/public/image/facebook-f.svg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="/public/image/github.svg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="/public/image/st2de.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="about">
+                            <a href="" class="hover">
+                                <div class="aboutus">
+                                    <span>關於我們</span>
+                                </div>
+                            </a>
+                            <a href="" class="hover">
+                                <div class="aboutus">
+                                    <span>關於我們</span>
+                                </div>
+                            </a>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
             </header>
             <section class="main">
-                <div class="navbar"></div>
+                <div class="post">
+                    <img src="" alt="">
+                    <div class="title"></div>
+                    <div class="date"></div>
+                </div>
+                <div class="post">
+                    <img src="/public/image/st2de.png" alt="">
+                    <div class="text">
+                        <div class="title">
+                            <h3>5/15說明會等待你</h3>
+                        </div>
+                        <div class="date">
+                           <h4>testetsts</h4>
+                        </div>
+                    </div>
 
+                </div>
             </section>
 
-            <footer>
-            </footer>
 
         </div>
-
+        <script src="/public/js/index.js"></script>
     </body>
